--- a/react-basico/src/recursos/CSS/usuario.css
+++ b/react-basico/src/recursos/CSS/usuario.css
@@ -1,8 +1,9 @@
 .tarjeta{
-    width: 40%;
-    margin-left: 2%;
-    margin-top: 2%;
+    position: relative;
+    float: left;
+    width: 33%;
     padding:auto;
+    margin:auto;
  }
 
  .boton{
@@ -13,6 +14,7 @@
     border-radius: 4px;
     cursor: pointer;
     margin: 2px;
+    padding: auto;
  }
  
  .boton:hover{
